--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,27 @@
-py4j==0.10.7
+certifi==2018.4.16
+chardet==3.0.4
+click==6.7
+Flask==1.0.2
+Flask-Cors==3.0.4
+Flask-JWT-Extended==3.9.1
+Flask-PyMongo==0.5.2
+gunicorn==19.8.1
+idna==2.7
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+numpy==1.15.0
+pandas==0.23.3
+passlib==1.7.1
+PyJWT==1.6.3
+pymongo==3.7.1
 pyspark==2.3.0
+python-dateutil==2.7.3
+pytz==2018.5
+requests==2.19.1
+scikit-learn==0.19.2
+scipy==1.1.0
+selenium==3.14.0
+six==1.11.0
+urllib3==1.23
+Werkzeug==0.14.1
