--- a/requirements.txt
+++ b/requirements.txt
@@ -8,19 +8,22 @@ Flask-JWT-Extended==3.9.1
 Flask-PyMongo==0.5.2
 gunicorn==19.8.1
 idna==2.7
+imbalanced-learn==0.4.3
+imblearn==0.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 numpy==1.15.1
 pandas==0.23.4
 passlib==1.7.1
+py4j==0.10.6
 PyJWT==1.6.3
 pymongo==3.7.1
 pyspark==2.3.0
 python-dateutil==2.7.3
 pytz==2018.5
 requests==2.19.1
-scikit-learn==0.19.2
+scikit-learn==0.20.3
 scipy==1.1.0
 selenium==3.14.0
 six==1.11.0
